build(Gradle): Migrate application declarations to conventions
Signed-off-by: Sebastian Schuberth <sschuberth@gmail.com>